--- a/src/app/dashboard/pages/cursos/cursos.component.html
+++ b/src/app/dashboard/pages/cursos/cursos.component.html
@@ -49,6 +49,7 @@
     <ng-container matColumnDef="opcionesDelete">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let curso">
+        <ng-template [ngIf]="(authUser$ | async)?.role === 'admin'">  
         <button
           mat-icon-button
           class="opciones-icon"
@@ -57,6 +58,7 @@
         >
           <mat-icon>delete</mat-icon>
         </button>
+        </ng-template>
       </td>
     </ng-container>
 
@@ -64,6 +66,7 @@
     <ng-container matColumnDef="opcionesEdit">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let curso">
+        <ng-template [ngIf]="(authUser$ | async)?.role === 'admin'">  
         <button
           mat-icon-button
           class="opciones-icon"
@@ -72,6 +75,7 @@
         >
           <mat-icon>edit</mat-icon>
         </button>
+        </ng-template>
       </td>
     </ng-container>
 
