--- a/src/app/dashboard/pages/inscripciones/inscripciones.component.html
+++ b/src/app/dashboard/pages/inscripciones/inscripciones.component.html
@@ -5,55 +5,28 @@
     <mat-form-field class="w-4" appearance="fill">
       <mat-label>Seleccione el curso</mat-label>
 
-      <mat-select  [formControl]="nombreCursoControl" >
-        <mat-option (click)="guardarCurso(option)" [value]="option.nombreCurso" *ngFor="let option of dataSourceCurso.data">{{ option.nombreCurso }}</mat-option>
-      </mat-select>
-
-      <!-- <input
-        matInput
-        aria-label="Nombre del curso"
-        [matAutocomplete]="curso"
-        [formControl]="nombreCursoControl"
-      />
-      <mat-autocomplete #curso="matAutocomplete">
+      <mat-select [formControl]="nombreCursoControl">
         <mat-option
-          *ngFor="let curso of filteredCursos | async"
-          [value]="curso.nombreCurso"
-          (click)="guardarCurso(curso)"
+          (click)="guardarCurso(option)"
+          [value]="option.nombreCurso"
+          *ngFor="let option of dataSourceCurso.data"
+          >{{ option.nombreCurso }}</mat-option
         >
-          <img alt="" class="example-option-img" height="25" />
-          <small> {{ curso.nombreCurso }}</small>
-        </mat-option>
-      </mat-autocomplete> -->
-
-
+      </mat-select>
     </mat-form-field>
 
     <!-- Nombre del alumno -->
     <mat-form-field class="w-4" appearance="fill">
       <mat-label>Seleccion el alumno</mat-label>
 
-      <mat-select  [formControl]="nombreAlumnoControl">
-        <mat-option (click)="guardarAlumno(option)"  [value]="option.apellido +', '+ option.nombre" *ngFor="let option of dataSourceAlumno.data">{{ option | nombreCompleto}}</mat-option>
-      </mat-select>
-
-      <!-- <input
-        matInput
-        aria-label="Nombre del alumno"
-        [matAutocomplete]="alumno"
-        [formControl]="nombreAlumnoControl"
-      />
-      <mat-autocomplete #alumno="matAutocomplete">
+      <mat-select [formControl]="nombreAlumnoControl">
         <mat-option
-          *ngFor="let alumno of filteredAlumnos | async"
-          [value]="alumno.apellido"
-          (click)="guardarAlumno(alumno)"
+          (click)="guardarAlumno(option)"
+          [value]="option.apellido + ', ' + option.nombre"
+          *ngFor="let option of dataSourceAlumno.data"
+          >{{ option | nombreCompleto }}</mat-option
         >
-          <img alt="" class="example-option-img" height="25" />
-          <small> {{ alumno | nombreCompleto }}</small>
-        </mat-option>
-      </mat-autocomplete> -->
-
+      </mat-select>
     </mat-form-field>
     <button
       class="botonGuardar"
