--- a/src/app/dashboard/pages/usuarios/abm-usuarios/abm-usuarios.component.html
+++ b/src/app/dashboard/pages/usuarios/abm-usuarios/abm-usuarios.component.html
@@ -36,35 +36,26 @@
       <mat-form-field class="w-full">
         <mat-label>Password</mat-label>
         <input [formControl]="passwordControl" type="text" matInput />
-        <mat-error
-          *ngFor="let error of passwordControl.errors | keyvalue"
-          >{{ error | controlErrorMessages }}</mat-error
-        >
+        <mat-error *ngFor="let error of passwordControl.errors | keyvalue">{{
+          error | controlErrorMessages
+        }}</mat-error>
       </mat-form-field>
     </div>
     <!--role-->
     <div class="col-6 field">
-        <mat-form-field class="w-full">
-          <mat-label>Role</mat-label>
-          <!-- <input [formControl]="roleControl" type="text" matInput /> -->
-          <!-- <mat-select>
-            <mat-select  [formControl]="roleControl" [(value)]="selected"></mat-select>
-            <mat-option value="admin">Administrador</mat-option>
-            <mat-option value="user">Usuario</mat-option>
-          </mat-select> -->
+      <mat-form-field class="w-full">
+        <mat-label>Role</mat-label>
 
-          <mat-select [formControl]="roleControl" [(value)]="selected">
-            <mat-option value="admin">Administrador</mat-option>
-            <mat-option value="user">Usuario</mat-option>
-          </mat-select>
-          
-          <mat-error *ngFor="let error of roleControl.errors | keyvalue">{{
-            error | controlErrorMessages
-          }}</mat-error>
-        </mat-form-field>
+        <mat-select [formControl]="roleControl" [(value)]="selected">
+          <mat-option value="admin">Administrador</mat-option>
+          <mat-option value="user">Usuario</mat-option>
+        </mat-select>
 
-      </div>
-
+        <mat-error *ngFor="let error of roleControl.errors | keyvalue">{{
+          error | controlErrorMessages
+        }}</mat-error>
+      </mat-form-field>
+    </div>
   </form>
 </div>
 <div mat-dialog-actions>
